Refactored for Java 8 Compatability